<resources>
    <string name="app_name">Android Final</string>
    <string name="btnMultipleChoice">Multiple Choice Quiz Creator</string>
    <string name="btnIntakeForm">Patient Intake Form</string>
    <string name="btnMovieInfo">Movie Information</string>
    <string name="btnOCTranspo">OC Transpo Bus Route App</string>
    <string name="ok">OK</string>
    <string name="activity_movie">Movie Activity</string>
    <string name="movie_author">Author: Maxwell Warwick</string>
    <string name="movie_version">Version: 1.0</string>
    <string name="movie_description">Instructions: Clicking items of the list of movies at the top
    of the page will open a dialog window with information on that movie. Clicking on the
    poster images will respond with a toast message displaying that movie's title. Clicking
    on the rating statistics button will respond with a snackbar message displaying the minimum,
    maximum, and average movie ratings</string>

    <string name="optoTitle">Optometrist\'s Office New Patient Intake Form:</string>
    <string name="fullNameOpto">Enter Full Name</string>
    <string name="addressOpto">Enter Address</string>
    <string name="birthdayOpto">Enter Birthday ((dd/mm/yyyy)</string>
    <string name="phoneOpto">Enter Phone Number</string>
    <string name="healthCardOpto">Enter Health Card Number</string>
    <string name="purchaseDate">Enter date of glasses purchase (dd/mm/yyyy)</string>
    <string name="infoOpto">What store did you buy your glasses from?</string>
    <string name="submitButtonOpto">Submit</string>

    <string name="titleDentist">Dentist Office New Patient Intake Form:</string>
    <string name="fullNameDentist">Enter Full Name</string>
    <string name="addressDentist">Enter Address</string>
    <string name="birthdayDentist">Enter Birthday (dd/mm/yyyy)</string>
    <string name="phoneDentist">Enter Phone Number</string>
    <string name="healthCardDentist">Enter Health Card Number</string>
    <string name="infoDentist">Do you have any medical benefits?</string>
    <string name="braces">Select if you have had braces before?</string>
    <string name="submitButtonDentist">Submit</string>

    <string name="fullNameDoctor">Enter Full Name</string>
    <string name="titleDoctor">Doctor\'s Office New Patient Intake Form:</string>
    <string name="addressDoctor">Enter Address</string>
    <string name="birthdayDoctor">Enter Birthday (dd/mm/yyyy)</string>
    <string name="phoneDoctor">Enter Phone Number</string>
    <string name="healthCardDoctor">Enter Health Card Number</string>
    <string name="infoDoctor">Indicate Any Previous Surgeries or Current Allergies</string>
    <string name="submitButtonDoctor">Submit</string>

    <string name="Button01">Add a New Doctor\'s Patient</string>
    <string name="Button02">Add a New Dentist\'s Patient</string>
    <string name="Button03">Add a New Optometrist Patient</string>
    <string name="intakeTitle">Current Patient Listings:</string>

    <string name="stop_num">Stop Number</string>
    <string name="search">Search</string>
    <string name="destination">Destination: </string>
    <string name="start_time">Start Time: </string>
    <string name="adj_start_time">Adjusted Start Time: </string>
    <string name="gps_speed">GPS speed (km/h): </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="cantfindstop">This stop does not exist!</string>
    <string name="oc_author">Author: Kyle Meelker</string>
    <string name="oc_version">Version: 0.9c</string>
    <string name="oc_description">To use the OC Transpo Route Planner, first search for a stop number. You may select a result to view more details about the route.</string>
</resources>
